# app/Http/Controllers/AuthController.php
@@ -4,17 +4,25 @@ namespace App\Http\Controllers;
 
 use App\Entities\AccessLog;
 use App\Entities\Auth\User;
+use App\Mail\ResetPasswordMail;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Mail;
 use Tymon\JWTAuth\Facades\JWTAuth;
 
 class AuthController extends Controller
 {
-
     public function __construct()
     {
-        $this->middleware('auth:api', ['except' => ['loginPortal','loginAdmin']]);
+        $this->middleware('auth:api', ['except' => ['loginPortal',
+            'loginAdmin',
+            'forgot',
+            'checkToken',
+            'reset'
+            ]
+        ]);
     }
 
     /**
@@ -157,8 +165,149 @@ class AuthController extends Controller
         ]);
     }
 
-    public function forgot(){
+    /**
+     * @OA\Post(
+     *     path="/auth/forgot",
+     *     summary="Autenticação da administração",
+     *     operationId="ForgotPassword",
+     *     tags={"auth"},
+     *     @OA\Parameter(
+     *         name="email",
+     *         in="query",
+     *         description="E-mail do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+    public function forgot(Request $request)
+    {
+        $this->validate($request, [
+            'email' => 'required|email|exists:users,email'
+        ]);
 
+        $user = User::where('email', $request->input('email'))->firstOrFail();
+        $token = $user->generateResetToken();
+
+        Mail::to($user)->send(new ResetPasswordMail(['user' => $user, 'token' => $token]));
+
+        return response()->json([], 200);
     }
-    
+
+    /**
+     * @OA\Post(
+     *     path="/auth/checkToken",
+     *     summary="Autenticação da administração",
+     *     operationId="CheckToken",
+     *     tags={"auth"},
+     *     @OA\Parameter(
+     *         name="email",
+     *         in="query",
+     *         description="E-mail do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="token",
+     *         in="query",
+     *         description="Token enviado no email do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+    public function checkToken(Request $request)
+    {
+        $this->validate($request, [
+            'email' => 'required|email|exists:password_resets,email',
+            'token' => 'required|exists:password_resets,token'
+        ]);
+
+        return response()->json([], 200);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/auth/reset/{token}",
+     *     summary="Autenticação da administração",
+     *     operationId="ResetPassword",
+     *     tags={"auth"},
+     *     @OA\Parameter(
+     *         name="token",
+     *         in="path",
+     *         description="Token enviado no email do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="email",
+     *         in="query",
+     *         description="E-mail do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="password",
+     *         in="query",
+     *         description="Nova senha do usuário",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="password_confirmation",
+     *         in="query",
+     *         description="Confirmação da nova senha",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+    public function reset(Request $request, $token)
+    {
+        $request->merge(['token' => $token]);
+        $this->validate($request, [
+            'email' => 'required|email|exists:users,email',
+            'password' => 'required|string|confirmed',
+            'token' => 'required|exists:password_resets,token'
+        ]);
+
+        $checkToken = DB::table('password_resets')->where([
+                ['token', '=' ,$token],
+                ['used' , '=', 1]
+            ])->get();
+
+        if(!isset($checkToken[0])){
+            User::where('email', $request->input('email'))->update(['password' => Hash::make($request->password)]);
+
+            DB::table('password_resets')->where('token', $token)->update(['used' => 1]);
+            return response()->json([], 200);
+        }
+        return response()->json(['res' => 'This token is invalid!'], 400);
+    }
 }
